fix / replaced date inputs for span in read only mode since there is no way to disable date picker efficiently on mobile browser

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -424,10 +424,6 @@
   .dialog-box {
     @apply bg-bg-3 p-1.5 rounded-2xl border border-border flex flex-col gap-1;
   }
-
-  .read-only {
-    @apply font-medium px-1 py-0.5 rounded-lg bg-brand-rgba mt-0.5;
-  }
 }
 
 
